--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
-    "ts-node": "^10.5.0",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/styled-components": "^5.1.23",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "@vitejs/plugin-react": "^1.2.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5",
+    "vite": "^2.3.2",
+    "vite-plugin-svgr": "^0.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -43,10 +50,11 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "typescript": "^4.5.5"
-  },
   "resolutions": {
     "styled-components": "^5"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/Paraplux/poc-w-max.git",
+  "author": "Paraplux <theparaplux@gmail.com>",
+  "license": "MIT"
 }
