style: 💄 change prettier conf and --write all project

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,7 @@
 {
-	"env": { "browser": true },
+	"env": {
+		"browser": true
+	},
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 2020,
@@ -9,7 +11,12 @@
 	"ignorePatterns": ["*.html", "dist/**/*"],
 	"rules": {
 		"react/react-in-jsx-scope": "off",
-		"@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+		"@typescript-eslint/no-unused-vars": [
+			"error",
+			{
+				"argsIgnorePattern": "^_"
+			}
+		]
 	},
 	"settings": {
 		"react": {
