--- a/.prettierrc
+++ b/.prettierrc
@@ -9,6 +9,7 @@
 	],
 	"printWidth": 120,
 	"quoteProps": "consistent",
+	"singleQuote": true,
 	"tabWidth": 4,
 	"trailingComma": "all",
 	"useTabs": true,
