--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "poc-w-max",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/icons": "^1.1.5",
-    "@chakra-ui/react": "^1.8.3",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^6.2.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "styled-components": "^5.3.3"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/styled-components": "^5.1.23",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "@vitejs/plugin-react": "^1.2.0",
-    "jest": "^27.5.1",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5",
-    "vite": "^2.3.2",
-    "vite-plugin-svgr": "^0.3.0"
-  },
-  "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "resolutions": {
-    "styled-components": "^5"
-  },
-  "main": "index.js",
-  "repository": "https://github.com/Paraplux/poc-w-max.git",
-  "author": "Paraplux <theparaplux@gmail.com>",
-  "license": "MIT"
+	"name": "poc-w-max",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"start": "vite",
+		"build": "tsc && vite build",
+		"serve": "vite preview"
+	},
+	"dependencies": {
+		"@chakra-ui/icons": "^1.1.5",
+		"@chakra-ui/react": "^1.8.3",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"@testing-library/jest-dom": "^5.16.2",
+		"@testing-library/react": "^12.1.3",
+		"@testing-library/user-event": "^13.5.0",
+		"framer-motion": "^6.2.6",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.2.1",
+		"styled-components": "^5.3.3"
+	},
+	"devDependencies": {
+		"@types/jest": "^27.4.0",
+		"@types/styled-components": "^5.1.23",
+		"@vitejs/plugin-react-refresh": "^1.3.1",
+		"@vitejs/plugin-react": "^1.2.0",
+		"jest": "^27.5.1",
+		"prettier": "^2.5.1",
+		"typescript": "^4.5.5",
+		"vite": "^2.3.2",
+		"vite-plugin-svgr": "^0.3.0"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"resolutions": {
+		"styled-components": "^5"
+	},
+	"main": "index.html",
+	"repository": "https://github.com/Paraplux/poc-w-max.git",
+	"author": "Paraplux <theparaplux@gmail.com>",
+	"license": "MIT"
 }
