--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.3",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.26.0",
 		"framer-motion": "^6.2.6",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -24,8 +25,8 @@
 	"devDependencies": {
 		"@types/jest": "^27.4.0",
 		"@types/styled-components": "^5.1.23",
-		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"@vitejs/plugin-react": "^1.2.0",
+		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
 		"typescript": "^4.5.5",
