--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
 	"main": "index.html",
 	"repository": "https://github.com/Paraplux/poc-w-max.git",
 	"author": "Paraplux <theparaplux@gmail.com>",
+	"contributors": [
+		"Maximus40 <m.arbouille@gmail.com>"
+	],
 	"license": "MIT"
 }
