--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
 		"styled-components": "^5.3.3"
 	},
 	"devDependencies": {
+		"@rollup/plugin-alias": "^3.1.9",
 		"@types/jest": "^27.4.0",
 		"@types/styled-components": "^5.1.23",
-		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"@vitejs/plugin-react": "^1.2.0",
+		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
 		"typescript": "^4.5.5",
