--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
 	"compilerOptions": {
 		"target": "ESNext",
-		"lib": ["DOM", "DOM.iterable", "ESNext"],
+		"lib": [
+			"DOM",
+			"DOM.iterable",
+			"ESNext"
+		],
 		"allowJs": false,
 		"skipLibCheck": false,
 		"esModuleInterop": false,
@@ -14,7 +18,18 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"baseUrl": "src",
+		"paths": {
+			"modules": [
+				"modules"
+			],
+			"components": [
+				"modules/shared/components"
+			],
+		}
 	},
-	"include": ["src"]
+	"include": [
+		"src"
+	]
 }
