--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"styled-components": "^5.3.3"
 	},
 	"devDependencies": {
+		"@rollup/plugin-alias": "^3.1.9",
 		"@types/jest": "^27.4.0",
 		"@types/styled-components": "^5.1.23",
 		"@vitejs/plugin-react": "^1.2.0",
