--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
 		"@chakra-ui/react": "^1.8.3",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
-		"@testing-library/jest-dom": "^5.16.2",
-		"@testing-library/react": "^12.1.3",
-		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.26.0",
 		"framer-motion": "^6.2.6",
 		"react": "^17.0.2",
@@ -24,11 +21,19 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-alias": "^3.1.9",
+		"@swc/core": "^1.2.113",
+		"@swc/jest": "^0.2.17",
+		"@testing-library/dom": "^8.11.1",
+		"@testing-library/jest-dom": "^5.16.2",
+		"@testing-library/react": "^12.1.3",
+		"@testing-library/react-hooks": "^7.0.2",
+		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.4.0",
 		"@types/styled-components": "^5.1.23",
 		"@vitejs/plugin-react": "^1.2.0",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"jest": "^27.5.1",
+		"jest-environment-jsdom": "^27.4.0",
 		"prettier": "^2.5.1",
 		"typescript": "^4.5.5",
 		"vite": "^2.3.2",
